1-system/2-harbor/harbor.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-virtual-service
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - harbor.ingress.pcai0201.fr2.hpecolo.net
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: harbor.unique.svc
            port:
              number: 80
